Port JEI to Minecraft 1.20.6 (#3529)