@@ -26,9 +26,9 @@ public class MinecraftLocaleSupplier implements Supplier<Locale> {
 			cachedLocaleCode = code;
 			String[] splitLangCode = code.split("_", 2);
 			if (splitLangCode.length == 1) { // Vanilla has some languages without underscores
-				cachedLocale = new Locale(code);
+				cachedLocale = Locale.of(code);
 			} else {
-				cachedLocale = new Locale(splitLangCode[0], splitLangCode[1]);
+				cachedLocale = Locale.of(splitLangCode[0], splitLangCode[1]);
 			}
 		}
 		return cachedLocale;
